--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'com.jakewharton:butterknife:8.8.1'
     compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
+    compile 'de.hdodenhof:circleimageview:2.2.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
