Adding activity for offer adding + adding some layout ids

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.UserProfileActivity" />
-        <activity android:name=".ui.SignUpActivity"/>
+        <activity android:name=".ui.SignUpActivity" />
+        <activity android:name=".ui.AddOfferActivity"></activity>
     </application>
 
 </manifest>
