--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.debeliya_i_kompaniya.internshipper">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -23,6 +25,7 @@
         <activity android:name=".ui.AddOfferActivity"></activity>
         <activity android:name=".ui.EmployerHomePageActivity"></activity>
         <activity android:name=".ui.ApplicantsActivity"></activity>
+        <activity android:name=".ui.InternshipDetailsActivity"></activity>
     </application>
 
 </manifest>
